# semantic-search

./: README.md  create_embeddings.py  document_repository.py  loader.py  main.py  pdf_extraction.py  pyproject.toml  splitter.py
